# http-media

./: .gitignore  .travis.yml  .vimrc.project  CHANGES.md  CONTRIBUTING.md  LICENSE  README  README.md  accept.cabal  http-media.cabal  http-quality.cabal
.github/workflows/: formatting.yml  haskell-ci.yml  ormolu-check.yml  ormolu-fix.yml
src/Network/HTTP/: Accept.hs  Media.hs
src/Network/HTTP/Accept/: Match.hs  MediaType.hs  Quality.hs  Utils.hs
src/Network/HTTP/Accept/MediaType/: Internal.hs
src/Network/HTTP/Media/: Accept.hs  Charset.hs  Encoding.hs  Language.hs  Match.hs  MediaType.hs  Quality.hs  RenderHeader.hs  Utils.hs
src/Network/HTTP/Media/Charset/: Internal.hs
src/Network/HTTP/Media/Encoding/: Internal.hs
src/Network/HTTP/Media/Language/: Internal.hs
src/Network/HTTP/Media/MediaType/: Internal.hs
test/: Test.hs  Tests.hs  accept-tests.cabal  build-and-run.sh  build-and-test.sh  run
test/Network/HTTP/Accept/: Gen.hs  Tests.hs
test/Network/HTTP/Accept/Match/: Tests.hs
test/Network/HTTP/Accept/MediaType/: Gen.hs  Tests.hs
test/Network/HTTP/Media/: Gen.hs  Tests.hs
test/Network/HTTP/Media/Accept/: Tests.hs
test/Network/HTTP/Media/Charset/: Gen.hs  Tests.hs
test/Network/HTTP/Media/Encoding/: Gen.hs  Tests.hs
test/Network/HTTP/Media/Language/: Gen.hs  Tests.hs
test/Network/HTTP/Media/Match/: Tests.hs
test/Network/HTTP/Media/MediaType/: Gen.hs  Tests.hs
