name:           accept
version:        0.0.1
license:        MIT
license-file:   LICENSE
author:         Timothy Jones
maintainer:     Timothy Jones <git@zimothy.com>
stability:      experimental
homepage:       http://github.com/zimothy/accept
bug-reports:    http://github.com/zimothy/accept/issues
category:       Web
copyright:      (c) 2012 Timothy Jones
build-type:     Simple
cabal-version:  >= 1.8
synopsis:       HTTP Accept and related headers
description:
    This library is intended to be a comprehensive solution to correctly using
    the HTTP Accept header, as well as the related headers Accept-Charset and
    Accept-Encoding. It encodes MIME parameters into the media type data, and
    allows the matching of the final header value by comparing quality values
    from both the client and the server.

flag development
    description: Whether to check warnings while building
    default:     False

library
    hs-source-dirs: src

    if !flag(development)
        ghc-options: -Wall -Werror -O2

    exposed-modules:
        Network.HTTP.Accept
        Network.HTTP.Accept.MediaType
        Network.HTTP.Accept.Quality
    other-modules:
        Network.HTTP.Accept.Match
        Network.HTTP.Accept.Utils
    build-depends:
        base >= 4.6 && < 5,
        bytestring >= 0.10 && < 0.11,
        containers >= 0.5 && < 0.6,
        utf8-string >= 0.3.7 && < 0.4

test-suite test-accept
    type:           exitcode-stdio-1.0
    hs-source-dirs: src test
    main-is:        Tests.hs

    if !flag(development)
        ghc-options: -Wall -Werror -threaded

    build-depends:
        base >= 4.6 && < 5,
        bytestring >= 0.10 && < 0.11,
        containers >= 0.5 && < 0.6,
        QuickCheck >= 2.5 && < 2.6,
        test-framework >= 0.8 && < 0.9,
        test-framework-quickcheck2 >= 0.3 && < 0.4,
        utf8-string >= 0.3.7 && < 0.4

source-repository head
    type:     git
    location: git://github.com/zimothy/accept.git

