name:          http-quality
version:       0.0.1
license:       MIT
license-file:  LICENSE
author:        Timothy Jones
maintainer:    Timothy Jones <git@zimothy.com>
stability:     experimental
homepage:      http://github.com/zimothy/http-quality
bug-reports:   http://github.com/zimothy/http-quality/issues
category:      Web
copyright:     (c) 2012 Timothy Jones
build-type:    Simple
cabal-version: >= 1.10
synopsis:      Processing HTTP 'q' parameters in Accept and related headers
description:
  This library is intended to be a comprehensive solution to correctly using
  quality parameters in HTTP headers. It addresses parsing of the Accept header,
  and includes general data types for matching against the other accept headers
  as well. It encodes MIME parameters into a 'MediaType' data, and allows the
  matching of the final header value by comparing quality values from both the
  client and the server.

flag development
  description: Whether to check warnings while building
  default:     False

library
  hs-source-dirs: src

  if flag(development)
    ghc-options: -Wall
  else
    ghc-options: -Wall -Werror

  default-language: Haskell2010
  default-extensions:
    OverloadedStrings

  exposed-modules:
    Network.HTTP.Accept
    Network.HTTP.Accept.MediaType
    Network.HTTP.Accept.Quality
  other-modules:
    Network.HTTP.Accept.Match
    Network.HTTP.Accept.MediaType.Internal
    Network.HTTP.Accept.Utils
  build-depends:
    base >= 4.6 && < 5,
    bytestring >= 0.10 && < 0.11,
    containers >= 0.5 && < 0.6,
    utf8-string >= 0.3.7 && < 0.4

test-suite test-http-quality
  type:           detailed-0.9
  hs-source-dirs: src test

  default-language: Haskell2010
  default-extensions:
    OverloadedStrings

  test-module: Tests
  other-modules:
    Network.HTTP.Accept
    Network.HTTP.Accept.Gen
    Network.HTTP.Accept.Match
    Network.HTTP.Accept.Match.Tests
    Network.HTTP.Accept.MediaType
    Network.HTTP.Accept.MediaType.Gen
    Network.HTTP.Accept.MediaType.Internal
    Network.HTTP.Accept.MediaType.Tests
    Network.HTTP.Accept.Quality
    Network.HTTP.Accept.Tests
    Network.HTTP.Accept.Utils

  if flag(development)
    ghc-options: -Wall -fhpc
  else
    ghc-options: -Wall -Werror -fhpc

  build-depends:
    base                  >= 4.6.0  && < 5.0,
    bytestring            >= 0.10.0 && < 0.11,
    Cabal                 >= 1.18.0 && < 1.19,
    cabal-test-quickcheck >= 0.1.0  && < 0.2,
    containers            >= 0.5.0  && < 0.6,
    QuickCheck            >= 2.6    && < 2.7,
    utf8-string           >= 0.3.7  && < 0.4

source-repository head
  type:     git
  location: git://github.com/zimothy/http-quality.git

